lol
gcc main.c validate.c put_in.c map_creator.c ../fillit/libft/libft.a
validate.c:309:1: error: extraneous closing brace ('}')
}
^
1 error generated.
